--- a/manuscript/01_main.Rmd
+++ b/manuscript/01_main.Rmd
@@ -28,43 +28,45 @@ Habitat selection patterns and strategies are therefore likely to be driven more
 
 In this study, we investigated patterns of habitat selection exhibited by forest bird communities in the post-breeding period at a fine-grained temporal (weeks) and spatial (patches) resolution in Central Europe. Our main objectives were to identify the structural or biological habitat features that are tracked most prominently in this period of high stress (the autumn-winter transition), to assess the patterns and magnitude of habitat selection as well as their possible temporal dynamism across the seasonal transition, and to determine whether selection strategies differed between bird foraging guilds.
 
-# Methodology
+# Methods
 
 ## Study site
 
-The study was conducted over the course of three months (13 weeks), from the first week of July 2020 to the first week of October 2020, in a typical structurally manipulated and commercially used patch of Central European temperate mixed forest (*Branišovský les*) close to České Budějovice, Czech Republic. The forest is located on the western edge of the city (48°58'55.672"N, 14°25'22.907"E), and represents a semi-urban forest stretch of around 800 ha segregated from neighbouring forests by extensive farmland, large fishponds and settlements. Situated at an altitude of approximately 400 m asl, it is technically a mixed forest, but is very patchy owing to the long history of forestry regimes as well as its connection with rural and military Czech history. The patches range from pure Norway spruce *Picea abies* plantations to mixed stands dominated by oaks (*Quercus* spp.). For more details on the species composition of the vegetation community, see *Supplementary Material section*.
+The study was conducted over the course of 13 weeks, from the first week of July 2020 to the first week of October 2020, in a typical structurally manipulated patch of Central European temperate mixed forest (*Branišovský les*) close to České Budějovice, Czech Republic. The forest is located on the western edge of the city (48°58'55.672"N, 14°25'22.907"E), and represents a semi-urban forest stretch of around 800 ha segregated from neighbouring forests by extensive farmland, large fishponds and settlements. Situated at an altitude of approximately 400 m asl, it is technically a mixed forest, but is very patchy owing to the long history of forestry regimes as well as its connection with rural and military Czech history. The patches range from pure Norway spruce plantations to mixed stands dominated by oaks (*Quercus* spp.). For more details on the species composition of the vegetation community, see *Supplementary Material section*.
 
 The entire forest stretch---with the exception of some parts either too disturbed or having restricted access---was effectively covered by selecting 32 non-random, evenly distributed circular sampling points of 30 m radius (Figure 1). They were chosen such that each point was at least 250 m away from its neighbours, so as to ensure spatiotemporal independence of consecutive point counts. Thus, the absolute cumulative area covered by the sampling points was approximately 9 ha. Clear cuts were avoided as much as possible. The selected set of points represented well the natural range and diversity of habitat characteristics in the entire forest.
 
 ## Habitat surveys
 
-Vegetation features potentially relevant to birds in the post-breeding period were selected and measured to initially characterise the various habitat patches. The habitat class of each sampling point was recorded according to whether asphalt roads ('Road') and forest-to-farmland transitions ('Edge') occurred within 150 m from the centre of the point or not ('Interior'). This was done using an aerial map (Mapy.cz). At each of the 32 points, all tree and shrub species within the 30 m radius were identified and counted, and the vertical strata to which they belonged noted ('Canopy' or 'Understorey'). Species identities were used to calculate species richness and diversity [Shannon's diversity index\; @shannon1948], while counts were used to calculate density per 100 m^2^. For other plants that classified as ground vegetation, only broad identifications were made (e.g., graminoids or mosses), and instead of counting them only the 'dominant' species (covering roughly $\ge$ 50% ground area) were identified. In addition, presence or absence of moss in the point was noted separately regardless of whether or not it was the dominant ground layer vegetation, as its presence usually indicates the quality of and disturbance within the forest patch [@berdugo2018; @cornelissen2007]. *Section 1 in Supplementary Material* details the habitat characterisation methodology.
+Vegetation features potentially relevant to birds in the post-breeding period were selected and measured to initially characterise the various habitat patches. The habitat class of each sampling point was defined according to whether asphalt roads ('Road') and forest-to-farmland transitions ('Edge') occurred within 150 m from the centre of the point or not ('Interior'). This was done using an aerial map (Mapy.cz). At each of the 32 points, all tree and shrub species within the 30 m radius were identified and counted, and the vertical strata to which they belonged noted ('Canopy' or 'Understorey'). Species identities were used to calculate species richness and diversity [Shannon's diversity index\; @shannon1948], while counts were used to calculate density per 100 m^2^. For other plants that classified as ground vegetation, only the 'dominant' species (covering roughly $\ge$ 50% ground area) at each point was recorded, for which identities were noted coarsely (e.g., graminoids or mosses) and counts were avoided. In addition, presence or absence of moss in the point was noted separately regardless of whether or not it was the dominant ground layer vegetation, as its presence usually indicates the quality and disturbance of the forest patch [@berdugo2018; @cornelissen2007]. The habitat characterisation methodology is detailed in *Section 1 in Supplementary Material*.
 
-We also calculated the proportion of deciduous trees in the 'Canopy' as this has been shown to be a more important factor than measures of tree diversity [@berg1997]. Canopy cover at a sampling point was measured using canopy photographs taken at three equidistant sub-points within 10--15 m of the centre, which were then analysed using ImageJ software [@rasband1997] by converting to binary black-and-white images and calculating the percentage of cover across the whole image [see @forester2011\; *Figure S1*]. The measurements from each sub-point were averaged to represent mean canopy cover of a point, while the standard deviation of the three values represented the heterogeneity in canopy cover in the point (high values signifying high heterogeneity). These canopy measurements were originally taken once in each sampling week, but most deciduous trees bore leaves even in the last week of sampling. Hence, the 13 weekly measurements of both canopy variables for each sampling point were instead averaged to provide more accurate measures of both, and these were used in the analyses. Lastly, phenological characteristics of leaves, flowers and fruits of the plants in each point were also recorded weekly on an ordinal scale in order to track fruiting, flowering and leaf senescence patterns across the study period *(Section 2 in Supplementary Material)*.
+We also calculated the proportion of deciduous trees in the 'Canopy', which is often more important than measures of tree diversity [@berg1997]. To measure canopy cover at a sampling point, canopy photographs were taken at three equidistant sub-points within 10--15 m of the centre, and then analysed using ImageJ software [@rasband1997] by converting to binary black-and-white images and calculating the percentage of cover across the whole image [see @forester2011\; *Figure S1*]. The measurements from each sub-point were averaged to represent mean canopy cover of a point, while the standard deviation of the three values represented the heterogeneity in canopy cover in the point (high values signifying high heterogeneity). These canopy measurements for each sampling point were taken once in each sampling week, as we originally expected canopy cover to vary as the season progressed. However, most deciduous trees bore leaves even in the last week of sampling, so the 13 weekly measurements of both canopy variables were instead averaged to provide single, more accurate measures of both. Lastly, phenological characteristics of leaves, flowers and fruits of the plants in each point were also recorded weekly on an ordinal scale in order to track fruiting, flowering and leaf senescence patterns across the study period *(see Section 2 in Supplementary Material)*.
 
 ## Bird counts
 
-We surveyed bird 'abundance' by means of fixed-radius point counts, using detections as a proxy for abundance. While detections are not an accurate measure of true abundance, with many vegetation characteristics and behavioural traits affecting detectability of birds, it was sufficient for our purposes due to two reasons. First, we were not interested in estimating true population size, but rather in assessing relative habitat use using the proxy of relative abundance. Second, our sampling points did not vary greatly in terms of vegetation characteristics that hinder detectability, or in detectability of different bird communities. In fact, most birds have similarly low levels of vocal activity in the post-breeding period.
+Our objective was not to estimate true population size, but rather to assess relative habitat use, for which a proxy for bird abundance or density is suitable [see @vitz2007; @alatalo1981]. Moreover, vegetation characteristics that hinder detectability such as understorey density were generally low across our sampling points, and behaviourally, most birds have similarly low levels of vocal activity in the post-breeding period. Thus, there is little reason to expect major variation in detectability of bird communities across our sampling points, so although detections are not an accurate measure of true abundance, it served our purpose as a proxy for abundance.
 
-Point counts were done at each of the 32 sampling points every week for 13 weeks (8 July 2020--1 October 2020), thus covering the post-breeding period from late summer till early autumn at a fine-grained temporal resolution. Sampling was done on 2--3 days in the middle of the calendar week while the remaining days served to delineate and separate two successive 'temporal units'. This enabled meaningful comparisons of bird abundances across weeks, as each would be sufficiently independent of the other and would thus represent a distinct time point *(Table 1)*.
+We therefore surveyed bird abundance (using detections) by means of fixed-radius point counts. The point counts were done at each of the 32 sampling points every week for 13 weeks (8 July 2020--1 October 2020), thus covering the post-breeding period from late summer till early autumn at a fine-grained temporal resolution. Sampling was done on 2--3 days in the middle of the calendar week while the remaining days served to delineate two successive 'temporal units'. This enabled meaningful comparisons of bird abundances across weeks, as each week would be sufficiently independent of the others and would thus represent a distinct time point *(Table 1)*.
 
 We used this continuous measure of time (and seasonality) rather than categorical factors like 'post-breeding period' and 'pre-migratory period', for better comparability. Firstly, there is high ambiguity and arbitrariness in the literature regarding exact definitions of these seasons. Moreover, such categories would have very different meanings and implications depending on location. For instance, 'pre-migratory periods' in the northernmost parts of Scandinavia would be extremely different from those in, say, southern Czech Republic. Instead, measuring in numbers of weeks identified by a standard time unit (the Gregorian calendar) allows easy interpretation of results. Finally, such a measurement of time provides a much finer temporal resolution, which could be important in spotting patterns developing at a relatively short time scale.
 
-We conducted 12--20 bird counts per sampling day, during the first five hours after sunrise (which shifted forward by around 10 minutes every week). Each point count was associated with several variables *(see Table 2 in Supplementary Material)* such as Point ID, sampling day and week, observer, and other non-focal variables such as weather, visibility and time of count (on an ordinal scale from 1 to 10 representing which part of the first five hours of sunrise the count was done in). Overcast and rainy days were avoided. We recorded the presence and counts of all birds heard or seen during a period of 20 minutes, divided into four intervals of five minutes each. Additionally, complementary information for each detection, like type of detection (visual, auditory or both), behaviour such as flyover (over the forest, within the forest canopy or not flying) or foraging (yes or no), and distance class were noted. Distance classes referred to five radial bins from the centre of the point: 0--10 m, 10--20 m, 20--30 m, 30--50 m and $\gt$ 50 m. Additionally, birds were observed for whether or not they entered the 30 m radius (i.e., entered the sampling point) at any time during the count, signifying the bird's 'use' of the habitat. 
+We conducted 12--20 bird counts per sampling day, during the first five hours after sunrise (which shifted forward by around 10 minutes every week). Each sampling event (point count) was associated with several variables *(see Table 2 in Supplementary Material)* such as Point ID, sampling day and week, observer, and other non-focal variables such as weather, visibility, and time of count (on an ordinal scale from 1 to 10 representing which part of the first five hours of sunrise the count was done in). Overcast and rainy days were avoided. We recorded the presence and counts of all birds heard or seen during a period of 20 minutes, divided into four intervals of five minutes each. Moreover, complementary information for each detection like type of detection (visual, auditory or both), behaviour such as flyover (over the forest, within the forest canopy or not flying) or foraging (yes or no), and distance class were noted. Distance classes referred to five radial bins from the centre of the point: 0--10 m, 10--20 m, 20--30 m, 30--50 m and $\gt$ 50 m. In addition, birds were observed for whether or not they entered the 30 m radius (i.e., entered the sampling point) at any time during the count, signifying the bird's 'use' of the habitat. 
 
-All birds were identified to species level when possible, but some closely related cryptics such as *Phylloscopus* spp., *Certhia* spp., *Regulus* spp. and *Dendrocopos* spp. are easy to confuse and difficult to identify correctly with just the occasional post-breeding vocalisations, and hence were often recorded as 'spuhs'. Prior to analysis, bird species were also classified based on feeding guild, which was determined using @gregory2007 (pt. Appendix 1) and Birds of the World [@billerman2020]. 
+All birds were identified to species level when possible, but some closely related cryptics such as *Phylloscopus* spp., *Certhia* spp., *Regulus* spp. and *Dendrocopos* spp. are easy to confuse and difficult to identify correctly with just the occasional post-breeding vocalisations, and hence were often recorded as 'spuhs'. Prior to analysis, bird species were also classified based on feeding guild, which was determined using Gregory et al. [-@gregory2007\; Appendix 1] and Birds of the World [@billerman2020]. 
 
 ## Data analysis
 
-To assess patterns of habitat selection by birds, we first excluded birds not identified to genus level, those detected flying over the forest and those that did not enter the 30 m radius in point counts. The measured habitat variables, without those excluded due to correlations, represented the pool of candidate predictors *(Table 2 in Supplementary Material)*. This set of plausible predictors was then used to build generalised linear mixed models (GLMMs) following an information-theoretic approach [@burnham1998]. That is, the Akaike Information Criterion [AIC\; @akaike1973; @akaike1974], and more specifically the corrected AIC or AIC~C~ [@hurvich1989], was used to judge model fit.
+To assess patterns of habitat selection by birds, we first excluded from our dataset birds not identified to genus level, those detected flying over the forest, and those that did not enter the 30 m radius. The list of measured habitat variables, excluding those removed due to correlations, represented the pool of candidate predictors *(Table 2 in Supplementary Material)*. This set of plausible predictors was then used to build generalised linear mixed models (GLMMs) following an information-theoretic approach [@burnham1998]. That is, the Akaike Information Criterion [AIC\; @akaike1974; @akaike1973], and more specifically the corrected AIC or AIC~C~ [@hurvich1989], was used to judge model fit.
 
-Analyses were conducted at two main levels of response. At the highest level, we looked for patterns of habitat selection in the whole bird community, by summing all the individual species detections per point count to obtain one 'bird abundance' value for each count, which was then used as the response variable. GLMMs were constructed using the *lme4* package [@bates2015], with the null model containing observer as a fixed effect (detections had *71:29* observer ratio) and sampling points and days as crossed random effects (model construction detailed later). Point ID was used a random effect because of repeated sampling in the same points over the 13 weeks, and sampling day in order to account for the random variability in each unique day. Residuals were modelled as coming from a Poisson distribution with a log link function.
+Analyses were conducted at two main levels of response. At the highest level, we looked for patterns of habitat selection in the whole bird community, by summing all the individual species detections per point count to obtain one 'bird abundance' value for each count as the response variable. The null model was constructed with observer as a fixed effect (detections had *71:29* observer ratio), and sampling points (point ID) and days as crossed random effects (model construction detailed later). Point ID was used a random effect because of repeated sampling in the same points over the 13 weeks, and sampling day in order to account for the random variability in each unique day. Residuals were modelled as coming from a Poisson distribution with a log link function. 
 
-At the second level, we investigated whether foraging guilds differed in their habitat selection patterns. The original bird observations were summarised by guild so as to obtain for each point abundance values of all the guilds that were observed. Only two guilds had sufficiently high number of overall detections, insectivores (rather, 'invertivores') and omnivores. Models were built separately for these two guilds, using the *glmmTMB* package [@brooks2017] to avoid convergence issues. The data summarised at guild level was insufficient for utilisation of two crossed random effects (as was done for the community-level models), so the random effect of sampling day, which had less estimated variance than that of the point, was excluded from the models. This did not result in major differences in the fixed effects estimates and so was not considered to be an issue. The null models had the same fixed effect as in the first case.
+At the second level, we investigated whether foraging guilds differed in their habitat selection patterns. The original bird observations were summarised by guild so as to obtain for each point abundance values of all the guilds that were observed. Only two guilds had sufficient overall detections for analysis, invertivores and omnivores, and they were modelled separately. This guild-level data was insufficient for utilisation of two crossed random effects (as was done for the community-level models), so the random effect of sampling day, which had less estimated variance than that of the point, was excluded from the models. This did not result in major differences in the fixed effects estimates and so was not considered to be an issue. The null models had the same fixed effect as in the first case.
 
-Models were constructed following a null model approach, i.e., starting from a null model then building up using stepwise selection of predictors. First, the week variable which had a visible effect (abundances were higher towards the end of the study period; noticed even during the bird counts), and other non-focal variables were added. Following this, the other, focal variables were finally added *(see Table 1)*. Stepwise selection was done by comparing AIC~C~ values of all the models using the AICctab() function from the *bbmle* package [@bolker2020], with an information threshold of 2 dAIC~C~ per df. If a variable was deemed important, its interaction with 'Week' was next tested (i.e., whether or not habitat selection criteria changed with the progress of the season). Once the selection was complete, parsimony was further tested by dropping some complex interaction terms. Finally, the most parsimonious model was selected. At the community level, the final model was a GLMM with Poisson error distribution and log link function fitted with the BOBYQA optimiser *(Table 2)*; the guild-level final models were a Poisson GLMM (log link) for invertivores and a negative binomial GLMM (log link) for omnivores.
+GLMMs were fitted using the *glmmTMB* package [@brooks2017], which performed better than the *lme4* [@bates2015] alternative when dealing with random effects having very low variance (point ID in the community-level models), and also avoided convergence issues in the guild-level models. Models were constructed following a null model approach, i.e., starting from a null model then building up using stepwise selection of predictors. First, the week variable which had a visible effect (abundances were higher towards the end of the study period; noticed even during the bird counts), and other non-focal variables *(see Section 2.3)* were added. Following this, the focal variables were added *(see Table 1)*. 
 
-For continuous or ordinal variables, both linear and polynomial terms were tested since there was no reason to assume a linear relationship with the predictors. Model diagnostics of all models were explored using the *DHARMa* package [@hartig2020] for distributional assumptions, heteroscedasticity, over-/underdispersion and zero-inflation. All analyses were done using R version ***4.1.1*** [@rcoreteam2020]. Individual figures with multiple graphs were composed using the *patchwork* package for R [@pedersen2020a].
+Stepwise selection was done by comparing AIC~C~ values of all the models using the AICctab() function from the *bbmle* package [@bolker2020], with an information threshold of 2 dAIC~C~ per df. If a variable was deemed important, its interaction with 'Week' was next tested (i.e., whether or not habitat selection criteria changed with the progress of the season). Once the selection was complete, parsimony was further tested by dropping some complex interaction terms. Finally, the most parsimonious model was selected. At the community level, the final model was a GLMM with negative binomial error distribution and log link function *(Table 2)*; the guild-level final models were a Poisson GLMM (log link) for invertivores and a negative binomial GLMM (log link) for omnivores.
+
+For continuous or ordinal variables, both linear and polynomial terms were tested since there was no reason to assume a linear relationship with the predictors. Model diagnostics of all models were explored using the *DHARMa* package [@hartig2020] for distributional assumptions, heteroscedasticity, over-/underdispersion and zero-inflation. We used the bootMer() function in *lme4* in order to test the significance of the fitted model results, by obtaining mean and CI estimates using semi-parametric bootstrapping. The bootstrapping was done with 1000 simulations and with parallel core processing [with the help of packages *parallel*, @rcoreteam2020; and *VGAM*, @yee2010]. Figures comprising multiple graphs were composed using the *patchwork* package for R [@pedersen2020a]. All analyses were done using `r R.version.string` [@rcoreteam2020].
 
 # Results
 
@@ -116,7 +118,7 @@ The general abundance increase in the bird community as the season progressed wa
 
 The two guilds showing different relationships with habitat characteristics is indirect evidence of differences in their resource-use strategies. Invertivores were selective only about one major characteristic, but were highly specific and consistent about it: they avoided oak-dominated homogeneous patches of forest, preferring spruce patches with heterogeneity, and were otherwise broad in resource-use. Omnivores, on the other hand, were affected by a larger interplay of factors and their patterns changed over time, probably because they had to adjust and accommodate the new arrivals. They did not seem to be specific about food resources directly. Rather, they showed a slight structural preference for forest edges with low densities of trees and this remained constant with time, but they formed an additional strong preference for highly heterogeneous areas as the season progressed. The latter could have been extremely important in accommodating the northern arrivals and presumably also enabled the large mixed-species foraging flocks. @alatalo1981 found evidence for the prevalence of interspecific competition in the seasonal environment of Finland. In our case, such competition brought about by migrant arrival was presumably mitigated by the omnivores choosing to form mixed-species flocks. The model for omnivores had a negative binomial distribution, implying overdispersion in omnivore abundance values, corroborating the presence of such flocks.
 
-## Conclusion
+# Conclusion
 
 The measure of canopy heterogeneity used in this study is insightful, but its accuracy can be improved by perhaps using five or more sub-points. Canopy height, stratification, tree girth, and age of forest are variables that could have important effects as well and hence can be incorporated. Although the observer effect in the bird count data was statistically accounted for in all the models by inclusion as a fixed effect, future study designs should try to involve either a single observer or a large number of observers. Extending the scope of such studies that use a continuous measure of seasonality by starting from the pre-breeding period will be extremely useful, not only as a reference but also potentially helping to show larger patterns. Finally, although the continuous measure allows better comparability of our results, other factors affecting comparability such as choice of bird survey method and habitat variables persist in our study.
 
