--- a/msc-thesis.bib
+++ b/msc-thesis.bib
@@ -60,7 +60,8 @@
   publisher = {{Finnish Zoological and Botanical Publishing Board}},
   issn = {0003-455X},
   urldate = {2021-03-15},
-  abstract = {The study is based on the yearround bird censuses of Soveri in southern Finland during 1934\textemdash 36 and of the author in northern Finland during 1975\textemdash 78. Congeneric passerines had smaller habitat overlaps and breadths than passerines which are not congeneric with other species in the forest. The habitat breadth of foliage-gleaners decreased with the increasing number of coexisting foliage-gleaning species in the same habitats. Both results suggest that interspecific competition modifies the habitat selection of forest birds. Intraspecific competition may partly be responsible for the clear positive correlation between abundance and habitat breadth of foliage-gleaners. Habitat breadths in general were smallest during the breeding season. This appears to be a consequence of special habitat requirements at that time, such as suitable nest-site and shelter against predation. This postulation is supported by the fact that the annual variation in habitat selection during the breeding season was smaller than in other seasons. Intense interspecific competition during breeding can be rejected as an alternative hypothesis, since the reduction in habitat breadths was particularly pronounced for species which were not congeneric with other species in the forest. All species changed their habitat seasonally to some degree, but for some migrants these changes were relatively slight. Overlaps in the habitats of gallinaceous birds were small in winter, and large overlaps in summer might reflect the absence of interspecific competition during the period of maximum food availability. In contrast, habitat overlaps among foliage-gleaners were smallest during the breeding season, which may be due to the restricted habitat selection, irrespective of competition, at that time.}
+  abstract = {The study is based on the yearround bird censuses of Soveri in southern Finland during 1934\textemdash 36 and of the author in northern Finland during 1975\textemdash 78. Congeneric passerines had smaller habitat overlaps and breadths than passerines which are not congeneric with other species in the forest. The habitat breadth of foliage-gleaners decreased with the increasing number of coexisting foliage-gleaning species in the same habitats. Both results suggest that interspecific competition modifies the habitat selection of forest birds. Intraspecific competition may partly be responsible for the clear positive correlation between abundance and habitat breadth of foliage-gleaners. Habitat breadths in general were smallest during the breeding season. This appears to be a consequence of special habitat requirements at that time, such as suitable nest-site and shelter against predation. This postulation is supported by the fact that the annual variation in habitat selection during the breeding season was smaller than in other seasons. Intense interspecific competition during breeding can be rejected as an alternative hypothesis, since the reduction in habitat breadths was particularly pronounced for species which were not congeneric with other species in the forest. All species changed their habitat seasonally to some degree, but for some migrants these changes were relatively slight. Overlaps in the habitats of gallinaceous birds were small in winter, and large overlaps in summer might reflect the absence of interspecific competition during the period of maximum food availability. In contrast, habitat overlaps among foliage-gleaners were smallest during the breeding season, which may be due to the restricted habitat selection, irrespective of competition, at that time.},
+  file = {C:\Users\Karthik Thrikkadeeri\Zotero\storage\I5JIKQ3S\Alatalo - 1981 - Habitat selection of forest birds in the seasonal .pdf}
 }
 
 @article{albert2020,
@@ -2068,7 +2069,7 @@
 
 @misc{rcoreteam2020,
   title = {R: {{A}} Language and Environment for Statistical Computing},
-  author = {R Core Team},
+  author = {{R Core Team}},
   year = {2020},
   address = {{Vienna, Austria}},
   howpublished = {R Foundation for Statistical Computing}
@@ -2761,6 +2762,16 @@
   urldate = {2021-03-30},
   abstract = {We examined diets of six insectivorous bird species (n = 202 individuals) from two vegetation zones along the Colorado River in Grand Canyon National Park, Arizona, 1994. All bird species consumed similar quantities of caterpillars and beetles, but use of other prey taxa varied. Non-native leafhoppers (Opsius stactagolus) specific to non-native tamarisk (Tamarix chinensis) substantially augmented Lucy's Warbler (Vermivora luciae) diets (49\%), while ants comprised 82\% of Yellow-breasted Chat (Icteria virens) diets. Yellow Warbler (Dendroica petechia) diets were composed of 45\% aquatic midges. All bird species consumed the non-native leafhopper specific to tamarisk. Comparison of bird diets with availability of arthropod prey from aquatic and terrestrial origins showed terrestrial insects comprised 91\% of all avian diets compared to 9\% of prey from aquatic origin. Seasonal shifts in arthropod prey occurred in diets of three bird species, although no seasonal shifts were detected in arthropods sampled in vegetation indicating that at least three bird species were not selecting prey in proportion to its abundance. All bird species had higher prey overlap with arthropods collected in the native, mesquite-acacia vegetation zone which contained higher arthropod diversity and better prey items (i.e., Lepidoptera). Lucy's Warbler and Yellow Warbler consumed high proportions of prey items found in greatest abundance in the tamarisk-dominated vegetation zone that has been established since the construction of Glen Canyon Dam. These species appeared to exhibit ecological plasticity in response to an anthropogenic increase in prey resources.Dieta de Aves Insect\'ivoras a lo largo del R\'io Colorado en el Gran Ca\~non, ArizonaResumen.{$\quad$}Examinamos la dieta de seis especies de aves insect\'ivoras (n = 202 individuos) de dos zonas de vegetaci\'on a lo largo del R\'io Colorado en el Parque Nacional del Gran Ca\~non, Arizona, en 1994. Todas las especies de aves consumieron cantidades similares de orugas y escarabajos, pero el uso de otras presas fue variable. Los Cicadellidae (Hom\'optera) ex\'oticos (Opsius stactagolus) espec\'ificos del tamarisco ex\'otico (Tamarix chinensis) comprendieron una parte sustancial de la dieta de Vermivora luciae (49\%), mientras que las hormigas representaron el 82\% de la dieta de Icteria virens. La dieta de Dendroica petechia incluy\'o un 45\% de d\'ipteros acu\'aticos de la familia Cecidomyiidae. Todas las especies de aves consumieron el cicadellide ex\'otico espec\'ifico del tamarisco. La comparaci\'on de las dietas de aves con la disponibilidad de presas de artr\'opodos de origen acu\'atico y terrestre mostr\'o que los insectos terrestres comprendieron el 91\% de todas las dietas de aves, comparado con un 9\% de presas de origen acu\'atico. Se registraron cambios estacionales en los artr\'opodos de la dieta de tres especies de aves, aunque no se detectaron cambios estacionales en los artr\'opodos muestreados en la vegetaci\'on, indicando que al menos tres especies de aves no estuvieron seleccionando las presas en proporci\'on a su abundancia. Todas las especies de aves presentaron mayor superposici\'on de presas con los artr\'opodos colectados en la zona de vegetaci\'on nativa de mesquite (Prosopis) y Acacia, la cual contuvo mayor diversidad de artr\'opodos y presas de mejor calidad (i.e., Lepidoptera). V. luciae y D. petechia consumieron altas proporciones de presas encontradas en mayor abundancia en la zona de vegetaci\'on dominada por el tamarisco, que ha sido establecida desde la construcci\'on de la Presa Glen Canyon. Estas especies parecieron exhibir plasticidad ecol\'ogica en respuesta a un incremento antropog\'enico en las presas como recuso alimenticio.},
   file = {C:\Users\Karthik Thrikkadeeri\Zotero\storage\KLNR9CVK\Yard et al. - 2004 - Diets of Insectivorous Birds Along the Colorado Ri.pdf}
+}
+
+@article{yee2010,
+  title = {The {{VGAM}} Package for Categorical Data Analysis},
+  author = {Yee, Thomas W.},
+  year = {2010},
+  journal = {Journal of Statistical Software},
+  volume = {32},
+  pages = {1--34},
+  file = {C\:\\Users\\Karthik Thrikkadeeri\\Zotero\\storage\\BR9ERX37\\Yee - 2010 - The VGAM package for categorical data analysis.pdf;C\:\\Users\\Karthik Thrikkadeeri\\Zotero\\storage\\KVZHLRKH\\v032i10.html}
 }
 
 @article{zhang2011,
